// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: InitDocumentation renders with a default component name set to Component 1`] = `
<Fragment>
  <h3>
    Initializing 
    component
    s
  </h3>
  <p>
    To initialize 
    component
    s use 
    <Property
      value="px.component.init()"
    />
    . If 
    <Property
      value=".init()"
    />
     is called without arguments it will target all 
    component
    s on the page. To initialize only a select few send one or more ids as an argument. The init function accepts both a single string or an array of strings. These strings need to match an existing 
    component
     id and will print warning messages if an argument is invalid.
  </p>
  <hr />
  <p>
    Example of valid arguments
  </p>
  <ComponentPreview
    codeFigure={true}
    language="javascript"
  >
    px.component.init();

    px.component.init("demo-component");

    px.component.init(["demo-component"]);

    px.component.init(["demo-component-1", .. "demo-component-x"]);

  </ComponentPreview>
</Fragment>
`;

exports[`Utilities: InitDocumentation renders with the correct component name 1`] = `
<Fragment>
  <h3>
    Initializing 
    test
    s
  </h3>
  <p>
    To initialize 
    test
    s use 
    <Property
      value="px.test.init()"
    />
    . If 
    <Property
      value=".init()"
    />
     is called without arguments it will target all 
    test
    s on the page. To initialize only a select few send one or more ids as an argument. The init function accepts both a single string or an array of strings. These strings need to match an existing 
    test
     id and will print warning messages if an argument is invalid.
  </p>
  <hr />
  <p>
    Example of valid arguments
  </p>
  <ComponentPreview
    codeFigure={true}
    language="javascript"
  >
    px.test.init();

    px.test.init("demo-test");

    px.test.init(["demo-test"]);

    px.test.init(["demo-test-1", .. "demo-test-x"]);

  </ComponentPreview>
</Fragment>
`;
